# trimhat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build_redist  pack.sh
build.linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build.windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
notarize/: notarization.plist  submission.plist
src/: plugin.c
